<resources>
    <string name="app_name">playandroid</string>
    <string name="title_activity_main">MainActivity</string>

    <!--maintab-->
    <string name="maintab_home">首页</string>
    <string name="maintab_naviga">导航</string>
    <string name="maintab_project">项目</string>
    <string name="maintab_mine">我的</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="but_login_password">忘记密码</string>
    <string name="but_login_register">注册</string>

    <string name="but_navi_come">进入</string>
    <string name="but_navi_login">登录</string>


    <string name="mine_choice_atic">收藏文章</string>
    <string name="mine_choice_web">收藏网址</string>
    <string name="mine_choice_todo">Todo</string>
    <string name="mine_choice_userinfor">用户信息</string>
    <string name="mine_choice_logout">退出登录</string>


    <!--for project fragment-->
    <string name="project_search_key">搜索</string>
    <string name="project_search_hint">搜索项目</string>
    <string name="error_tips">错误</string>
    <string name="reload">重新连接</string>

     <!--for home fragment-->
    <string name="home_search_key">搜索</string>
    <string name="home_search_hint">搜索项目</string>
    <string name="home_tab_essay">最近文章</string>
    <string name="home_tab_project">最近项目</string>
    <string name="home_tab_hot">网站常用</string>



</resources>
